频繁调用getBoundingClientRect会卡顿

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -18,6 +18,7 @@
   --todo-type-color6: #bf7ad9;
   --todo-type-color7: #9c8565;
 
+  --todo-menu-height: 36px;
 
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
