--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,6 +7,8 @@
 
   --todo-text-gray1: #b3b3b3;
   --todo-text-gray2: #a5a5a5;
+  --todo-placeholder-color: #a3a3a3;
+
 
   --divider-gray1: #d1d1d1;
 
